@anujmehra updated pom.xml to use java internal API's